# py-hint-search

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
src/: annotation_inserter.py  annotations.py  api.py  api_ml_model.py  classes_gatherer.py  communication_test.py  constants.py  evaluation.py  fake_editor.py  import_inserter.py  imports.py  loggers.py  main-EXPERIMENT.py  main-GOOD.py  main-pygls.py  main-typet5.py  main.py  main_typet5.py  py.typed  pyright_typestubs_creator.py  pyrightconfig.json  searchtree.py  stub_example.py  stubs.py  tree-GOOD.py  treebuilder-OLD.py  treebuilder.py  type4py_api.py  type_check.py  typestubs_creator.py  typestubs_parser.py
src/benchmark_creator/: check_annotation_correctness.py  main.py  merge_stubs_into_code.py  remove_type_annotations.py  utils.py
src/benchmarks/: project hashes.txt
src/benchmarks/results/: all-evaluation-statistics-pyright.csv  (+17 more)
src/chatgpt answers/: chatgpt.py  huh.py
src/client/: account.py  json_rpc_endpoint.py  lsp_client.py  lsp_endpoint.py
src/client-OLD/: common.py  json_rpc_endpoint.py  lsp_client.py  lsp_endpoint.py  lsp_structs.py  messages.py  protocol.py
src/clientgood/: json_rpc_endpoint.py  lsp_client.py  lsp_endpoint.py
src/clienttry/: json_rpc_endpoint.py  lsp_client.py  lsp_endpoint.py  lsp_structs.py
src/communication/: example.py  taart.py
src/example/: account.py  example-wrong.py  example.py  sum.py
src/lsp_client/: json_rpc_endpoint.py  lsp_endpoint.py
src/typed/: example-wrong.py  example.py
tests/: test_annotations.py  test_evaluation.py  test_treebuilder.py
(+208 files in other folders)
